--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,3 @@
-# Porta em que a aplicação irá rodar
+spring.application.name=consulta-endereco
 server.port=8080
 
-# URL da API ViaCEP
-viacep.url=https://viacep.com.br/ws/
-
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-
-logging.level.org.springframework.web=INFO
-
-spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-spring.jackson.time-zone=Brazil/East
